Fix style: Change white-space:nowrap to white-space:pre-line

--- a/scss/klis-index.scss
+++ b/scss/klis-index.scss
@@ -1,5 +1,5 @@
 /* Katelinlis.xyz initial style */
 
 p {
-    white-space: nowrap;
+    white-space: pre-line;
 }
